--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -3,7 +3,7 @@
 
 name: Python package
 
-on: workflow_dispatch
+on: [workflow_dispatch]
   # push:
   #   branches: [ "master" ]
   # pull_request:
