--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,10 +24,11 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    # - name: Install dependencies
-    #   run: |
+    - name: Install dependencies
+      run: |
     #     python -m pip install --upgrade pip
-    #     python -m pip install flake8 pytest
+        python -m pip install pytest
+        # python -m pip install flake8 pytest
     #     if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     # - name: Lint with flake8
     #   run: |
