--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         # to supply options, put them in 'env', like:
-        # env:
-        #   CIBW_SOME_OPTION: value
+        env:
+          CIBW_SOME_SKIP: pp39 pp310
 
       - uses: actions/upload-artifact@v3
         with:
