--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -25,7 +25,7 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         # to supply options, put them in 'env', like:
         env:
-          CIBW_SOME_SKIP: pp39 pp310
+          CIBW_SKIP: pp39-* pp310-* pp311-* pp312-*
 
       - uses: actions/upload-artifact@v3
         with:
