--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -26,6 +26,9 @@ jobs:
         # to supply options, put them in 'env', like:
         env:
           CIBW_SKIP: pp39-* pp310-* pp311-* pp312-*
+          CIBW_ARCHS_MACOS: auto64
+          CIBW_ARCHS_WINDOWS: auto64
+          CIBW_ARCHS_LINUX: auto64
 
       - uses: actions/upload-artifact@v3
         with:
