--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -7,10 +7,10 @@ jobs:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix:
-        os:  [ubuntu-20.04]
       # matrix:
-      #   os: [ubuntu-20.04, windows-2019, macOS-11]
+      #   os:  [ubuntu-20.04]
+      matrix:
+        os: [ubuntu-20.04, windows-2019, macOS-11]
     
     steps:
       - uses: actions/checkout@v4
