--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -10,7 +10,7 @@ jobs:
       # matrix:
       #   os:  [ubuntu-20.04]
       matrix:
-        os: [ubuntu-20.04, windows-2019, macOS-11]
+        os: [ubuntu-20.04, windows-2019, macOS]
     
     steps:
       - uses: actions/checkout@v4
