--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -10,8 +10,8 @@ jobs:
       # matrix:
       #   os:  [ubuntu-20.04]
       matrix:
-        os: [ubuntu-20.04, windows-2019, macOS]
-    
+        os: [ubuntu-22.04, windows-2022, macos-11]
+
     steps:
       - uses: actions/checkout@v4
 
@@ -27,8 +27,10 @@ jobs:
         env:
           CIBW_SKIP: pp39-* pp310-* pp311-* pp312-*
           CIBW_ARCHS_MACOS: "x86_64 universal2 arm64"
-          CIBW_ARCHS_WINDOWS: auto64
+          CIBW_ARCHS_WINDOWS: auto
           CIBW_ARCHS_LINUX: auto64
+          CIBW_TEST_REQUIRES: pytest
+          CIBW_TEST_COMMAND: "pytest {project}/tests"    
 
       - uses: actions/upload-artifact@v3
         with:
