--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,6 +1,6 @@
 name: Build wheels
 
-on: [push, pull, workflow_dispatch]
+on: [workflow_dispatch]
 
 jobs:
   build_wheels:
@@ -25,13 +25,13 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         # to supply options, put them in 'env', like:
         env:
-          CIBW_SKIP: pp39-* pp310-* pp311-* pp312-* pp37-win* pp38-win*
+          CIBW_SKIP: "pp39-* pp310-* pp311-* pp312-* pp37-win* pp38-win*"
           CIBW_ARCHS_MACOS: "x86_64 universal2 arm64"
           CIBW_ARCHS_WINDOWS: auto
           CIBW_ARCHS_LINUX: auto64
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: "pytest {project}/tests"    
-          CIBW_TEST_SKIP: *-macosx_universal2:arm64
+          CIBW_TEST_SKIP: "*-macosx_universal2:arm64"
 
       - uses: actions/upload-artifact@v3
         with:
