--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -25,8 +25,8 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         # to supply options, put them in 'env', like:
         env:
-          CIBW_SKIP: "pp39-* pp310-* pp311-* pp312-* pp37-win* pp38-win*"
-          CIBW_ARCHS_MACOS: "x86_64 universal2 arm64"
+          CIBW_SKIP: pp37-* pp38-* cp36-* cp37-* cp38-*
+          CIBW_ARCHS_MACOS: x86_64 arm64
           CIBW_ARCHS_WINDOWS: auto
           CIBW_ARCHS_LINUX: auto64
           CIBW_TEST_REQUIRES: pytest
