--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -25,7 +25,7 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         # to supply options, put them in 'env', like:
         env:
-          CIBW_SKIP: pp37-* pp38-* cp36-* cp37-* cp38-*
+          CIBW_SKIP: pp* cp36-* cp37-* cp38-*
           CIBW_ARCHS_MACOS: x86_64 arm64
           CIBW_ARCHS_WINDOWS: auto
           CIBW_ARCHS_LINUX: auto64
