--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -11,7 +11,7 @@ jobs:
       #   os:  [ubuntu-20.04]
       matrix:
         os: [ubuntu-22.04, windows-2022, macos-11]
-
+        # see https://github.com/actions/runner-images
     steps:
       - uses: actions/checkout@v4
 
@@ -25,10 +25,11 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         # to supply options, put them in 'env', like:
         env:
-          CIBW_SKIP: pp* cp36-* cp37-* cp38-*
+          CIBW_SKIP: pp* cp36-* cp37-* cp38-* cp*macos* cp*linux*
           CIBW_ARCHS_MACOS: x86_64 arm64
           CIBW_ARCHS_WINDOWS: auto
           CIBW_ARCHS_LINUX: auto64
+          # CIBW_ARCHS_LINUX: x86_64 aarch64
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: "pytest {project}/tests"    
           CIBW_TEST_SKIP: "*-macosx_universal2:arm64"
